# gemini-turbotax

./: README.md  pyproject.toml
data/: Custom_CSV_Template.csv
src/gemini_turbotax/: __init__.py  __main__.py  config.py  util.py
