[project]
name = "gemini-turbotax"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ouroboros Chrysopoeia", email = "impredicative@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.0.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
hello = "gemini_turbotax:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_turbotax"]
