[project]
name = "gemini-turbotax"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ouroboros Chrysopoeia", email = "impredicative@users.noreply.github.com" }
]
dependencies = [
    "pandas>=2.0.3",
    "fire>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
convert = "gemini_turbotax:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_turbotax"]
