[project]
name = "gemini-turbotax"
version = "0.1.0"
dependencies = [
    "pandas>=2.0.3",
    "fire>=0.5.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
convert = "gemini_turbotax:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gemini_turbotax"]
